--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Gilles Barbier - Workflow Orchestration Consultant | Turn Failing Microservices Into Reliable Revenue Engines</title>
     <meta name="description" content="I help scale-ups design orchestration systems that actually scale. Built 3 production workflow engines processing 50M+ executions monthly. Expert in microservices architecture." />
     <meta name="author" content="Gilles Barbier" />
+    <meta name="keywords" content="workflow orchestration, microservices architecture, software consultant, sagas pattern, distributed systems, event sourcing, workflow engines, scalability" />
+    <link rel="canonical" href="https://gillesbarbier.dev" />
+    
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Gilles Barbier",
+      "jobTitle": "Workflow Orchestration Consultant",
+      "description": "Expert in microservices architecture and workflow orchestration systems",
+      "url": "https://gillesbarbier.dev",
+      "sameAs": [
+        "https://github.com/geomagilles",
+        "https://linkedin.com/in/gillesbarbier"
+      ]
+    }
+    </script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,11 +35,17 @@
     <meta property="og:title" content="Gilles Barbier - Workflow Orchestration Consultant" />
     <meta property="og:description" content="Turn Failing Microservices Into Reliable Revenue Engines" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://gillesbarbier.dev" />
+    <meta property="og:image" content="https://gillesbarbier.dev/uploads/9ec68f06-cbc4-485b-80aa-e001613e2049.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Gilles Barbier" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Gilles Barbier - Workflow Orchestration Consultant" />
+    <meta name="twitter:description" content="Turn Failing Microservices Into Reliable Revenue Engines" />
+    <meta name="twitter:image" content="https://gillesbarbier.dev/uploads/9ec68f06-cbc4-485b-80aa-e001613e2049.png" />
   </head>
 
   <body>
