--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <meta property="og:title" content="Gilles Barbier - Workflow Orchestration Consultant" />
     <meta property="og:description" content="Turn Failing Microservices Into Reliable Revenue Engines" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/uploads/gilles.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/uploads/gilles.png" />
   </head>
 
   <body>
